fix(style): improve code readability

--- a/_src/_sass/main.scss
+++ b/_src/_sass/main.scss
@@ -39,7 +39,7 @@ a[href^="sms\:"]:before {
   --links: var(--base09);
   --focus: var(--base0C);
   --border: var(--base02);
-  --code: var(--base0F);
+  --code: var(--base05);
   --animation-duration: 0.13s;
   --button-hover: var(--base02);
   --scrollbar-thumb: var(--base04);
